# DoorayMCP

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  MIGRATION.md  README-python.md  README-uvx.md  README.md  pyproject.toml  requirements.txt  run-examples.md
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  docker-publish.yml  simple-test.yml
src/dooray_mcp/: __init__.py  main.py  server.py
src/dooray_mcp/client/: __init__.py  dooray_client.py
src/dooray_mcp/exceptions/: __init__.py
src/dooray_mcp/tools/: __init__.py
src/dooray_mcp/types/: __init__.py
src/dooray_mcp_server/: __init__.py  __main__.py  constants.py  main.py  main_http.py  main_sse.py  main_streamable_http.py  server.py
src/dooray_mcp_server/client/: __init__.py  dooray_client.py  dooray_http_client.py
src/dooray_mcp_server/tools/: __init__.py  calendar_tools.py  messenger_tools.py  project_tools.py  wiki_tools.py
src/dooray_mcp_server/transport/: __init__.py  http_server_transport.py  sse_transport.py  streamable_http_transport.py
src/dooray_mcp_server/types/: __init__.py  dooray_api_types.py
src/dooray_mcp_server/utils/: __init__.py
tests/: __init__.py  conftest.py  test_basic.py  test_http_transport.py  test_server.py
